# CRM_Agents

./: .env.example  .gitignore  README.md  data_synthesize.json  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: engine.py
backend/app/api/: routes.py
backend/app/core/: config.py  models.py
backend/app/data/: mock_seed.py
backend/app/services/: agent_service.py  crm_service.py  espo_adapter.py  llm_service.py  repository.py  twenty_adapter.py
backend/tests/: test_api.py
docs/: AGENT-FLOWS.md  ARCHITECTURE.md  DEVELOPMENT.md  REPO-MAP.md
frontend/: index.html  package.json
frontend/src/: styles.css
frontend/src/components/: AgentPanel.tsx  DealList.tsx  DealOverview.tsx  MetricCard.tsx  ui.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/pages/: App.tsx
