[project]
name = "salesops-agent-api"
version = "0.1.0"
description = "Hackathon CRM agent backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "pydantic-settings>=2.6.0",
  "uvicorn[standard]>=0.32.0",
  "strands-agents>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
